--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint && npx tsc",
     "schema:gen": "run-script-os",
@@ -15,11 +15,11 @@
   },
   "dependencies": {
     "@apollo/server": "^4.11.2",
-    "@as-integrations/next": "^3.1.0",
+    "@as-integrations/next": "^3.2.0",
     "@prisma/client": "^5.21.1",
     "graphql": "^16.9.0",
     "graphql-tag": "^2.12.6",
-    "next": "^14.2.16",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
