--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "styled-jsx": "^5.1.6"
   },
   "devDependencies": {
     "@graphql-tools/merge": "^9.0.8",
